adding s to html to see if that helps with github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ak-run.github.io/recipe-shopping-app",
+  "homepage": "https://ak-run.github.io/recipe-shopping-app",
   "name": "recipe-shopping-app",
   "version": "0.1.0",
   "private": true,
